# six-birds-de

./: .coverage  .gitignore  .package-repo-snapshot.json  Makefile  README.md  build_backend.py  pyproject.toml
assets/: zenodo_related_works.csv
configs/: 3x2pt_y3_maglim_smoke.yaml  3x2pt_y6_3x2pt_smoke.yaml  README.md
data/: README.md  registry.yaml
experiments/: _smoke_fit.py  _smoke_lss_config.py  _smoke_manifest.py  run_3x2pt_ppd_split.py  run_3x2pt_smoke_like.py  run_des_sn5yr_cov_sanity.py  run_des_y3_blockmap.py  run_des_y3_chain_sanity.py  run_des_y3_vector_sanity.py  run_des_y6_3x2pt_smoke.py  run_fit_des_sn5yr.py  run_fit_des_y6_bao.py  run_infer_distance.py  run_kids450_ppd_probe_split.py  run_lss_backend_probe.py  run_ppd_background.py  run_ppd_synthetic.py  run_rewrite_background_vs_lcdm.py  run_rewrite_effective_w_validate.py  run_rewrite_vs_lambda.py  run_scale_sweep.py  run_toy1.py  run_toy2_patch.py  run_y3_ppd_probe_split.py  run_y3_ppd_robustness.py  run_y3_ppd_with_geometry.py  run_y3_scale_cut_sweep.py  run_y3_shear_physical_smoke.py
lean/: SixBirds.lean  lake-manifest.json  lakefile.lean
results/: README.md
scripts/: add_registry_entry_from_urls.py  build_paper.sh  check_des_y6_3x2pt_availability.py  collect_metrics.py  extract_urls_from_tex.py  fetch_data.py  inspect_des_y6_bao_release.py  list_des_y3_chain_dir.py  make_arxiv_bundle.sh  make_hal_source_zip.sh  vendor_figures.py  vendor_tables.py
tests/: test_core.py  test_cosmo_background.py  test_cosmo_wcdm.py  test_des_sn5yr_cov_parser.py  test_des_y3_chain_meta.py  test_import.py  (+7 more)
(+88 files in other folders)
